<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<item
    android:id="@+id/navigation_designs"
    android:icon="@drawable/button_designs"
    android:title="@string/designs"
    app:showAsAction="ifRoom"/>
<item
    android:id="@+id/navigation_plans"
    android:icon="@drawable/button_plans"
    android:title="@string/plans"
    app:showAsAction="ifRoom"/>
<item
    android:id="@+id/navigation_manuals"
    android:icon="@drawable/button_manuals"
    android:title="@string/manuals"
    app:showAsAction="ifRoom"/>
<item
    android:id="@+id/navigation_projects"
    android:icon="@drawable/button_projects"
    android:title="@string/projects"
    app:showAsAction="ifRoom"/>

</menu>